Implement configuration
