# apiserver/model_configuration.go
@@ -1,0 +1,36 @@
+/*
+ * Booking App
+ *
+ * API to access and configure the Booking App
+ *
+ * API version: 1.1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+// Configuration - Defines configuration of bookings app.
+type Configuration struct {
+
+	// Start of bookable time (hours).
+	DayStartHours int32 `json:"dayStartHours,omitempty"`
+
+	// Start of bookable time (mins).
+	DayStartMins int32 `json:"dayStartMins,omitempty"`
+
+	// End of bookable time (hours).
+	DayEndHours int32 `json:"dayEndHours,omitempty"`
+
+	// End of bookable time (mins).
+	DayEndMins int32 `json:"dayEndMins,omitempty"`
+}
+
+// AssertConfigurationRequired checks if the required fields are not zero-ed
+func AssertConfigurationRequired(obj Configuration) error {
+	return nil
+}
+
+// AssertConfigurationConstraints checks if the values respects the defined constraints
+func AssertConfigurationConstraints(obj Configuration) error {
+	return nil
+}
