# apiservices/api_configuration_service.go
@@ -1,0 +1,52 @@
+//  This file is part of the eliona project.
+//  Copyright © 2022 LEICOM iTEC AG. All Rights Reserved.
+//  ______ _ _
+// |  ____| (_)
+// | |__  | |_  ___  _ __   __ _
+// |  __| | | |/ _ \| '_ \ / _` |
+// | |____| | | (_) | | | | (_| |
+// |______|_|_|\___/|_| |_|\__,_|
+//
+//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
+//  BUT NOT LIMITED  TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+//  NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+//  DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+package apiservices
+
+import (
+	"booking-app/apiserver"
+	"booking-app/conf"
+	"context"
+	"net/http"
+)
+
+// ConfigurationAPIService is a service that implements the logic for the ConfigurationAPIServicer
+// This service should implement the business logic for every endpoint for the ConfigurationAPI API.
+// Include any external packages or services that will be required by this service.
+type ConfigurationAPIService struct {
+}
+
+// NewConfigurationAPIService creates a default api service
+func NewConfigurationAPIService() apiserver.ConfigurationAPIServicer {
+	return &ConfigurationAPIService{}
+}
+
+// GetConfiguration - Get configuration
+func (s *ConfigurationAPIService) GetConfiguration(ctx context.Context) (apiserver.ImplResponse, error) {
+	config, err := conf.GetConfig(ctx)
+	if err != nil {
+		return apiserver.ImplResponse{Code: http.StatusInternalServerError}, err
+	}
+	return apiserver.Response(http.StatusOK, config), nil
+}
+
+// PutConfiguration - Puts a configuration
+func (s *ConfigurationAPIService) PutConfiguration(ctx context.Context, configuration apiserver.Configuration) (apiserver.ImplResponse, error) {
+	upsertedConfig, err := conf.UpsertConfig(ctx, configuration)
+	if err != nil {
+		return apiserver.ImplResponse{Code: http.StatusInternalServerError}, err
+	}
+	return apiserver.Response(http.StatusCreated, upsertedConfig), nil
+}
